# zmotion_ws

./: .gitignore
run/: README.md  fake_action_sim.md  fake_move_topic.md  fake_topic_pub.md  how_action_works.md  hw_info.md  minimal_firmware.md  robust_action_server.md  run.md  run_action.md  zmc_408.md
run/compare/: a.cpp  b.cpp
run/mmd/: action_class_composition.mmd  action_comm_flow.mmd  move_axis_flowchart.mmd  run_main.md  run_main.mmd  test.mmd  the_Must-Have_logic.mmd  threads.mmd
src/motion_control/: CMakeLists.txt  zmotion_test
src/motion_control/include/: readme.txt
src/motion_control/src/: diagnostic.cpp  get_controller_info.cpp  help.cpp  main.cpp  zmcaux.cpp
src/motion_driver/: CMakeLists.txt  package.xml  run.md
src/motion_driver/motion_driver/: zmotion.py
src/motion_driver/scripts/: action_client.py  action_server.py
src/motion_msgs/: CMakeLists.txt  package.xml
src/motion_msgs/action/: AxesHoming.action  AxesMoving.action  AxisHoming.action  ConvertDxfToCam.action  MovePath.action
src/motion_msgs/msg/: AxisStatus.msg  MotionStatus.msg  MotionTarget.msg  ObjectPosition.msg  PathSegment.msg
src/motion_msgs/srv/: ConvertDxfToCam.srv  ConvertDxfToXml.srv  LoadFile.srv
src/msgs_bridge/: CMakeLists.txt  package.xml
src/msgs_bridge/launch/: converter.launch.py  msgs_converter.launch.py
src/msgs_bridge/src/: action_converter.cpp  status_converter.cpp
src/slms_interface/: CMakeLists.txt  package.xml
src/slms_interface/msg/: AxisStatus.msg
src/slms_interface/srv/: Trigger.srv
src/vmotion_driver/: CMakeLists.txt  package.xml
src/vmotion_driver/scripts/: action_client.py  action_server.py  zmotion_action_server.py
src/zmotion_driver/: CMakeLists.txt  CMakeLists_v2.txt  package.xml  package_v2.xml
src/zmotion_driver/comp/: a.cpp  b.cpp
src/zmotion_driver/config/: example.dxf  example.xml  params.yaml  zmotion_params.yaml
src/zmotion_driver/include/zmotion_driver/: zmc_controller.h  zmc_controller_v1.h  zmcaux.h
src/zmotion_driver/launch/: zmotion.launch.py
src/zmotion_driver/src/: action_server.cpp  bus_cmd.cpp  connect.cpp  enable_and_disable.cpp  get_address_and_atype.cpp  homing.cpp  jogging.cpp  main.cpp  move_and_read.cpp  move_some.cpp  pub_dpos_and_mpos.cpp  test_move.cpp  zmc_controller.cpp  zmc_controller_v1.cpp  zmc_move.cpp  zmcaux.cpp  zmp_param.cpp
src/zmotion_driver/test/: test_homing.cpp
