cmake_minimum_required(VERSION 3.8)
project(motion_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(action_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/MotionTarget.msg"
  "msg/MotionStatus.msg"
  "srv/ConvertDxfToCam.srv"
  "srv/ConvertDxfToXml.srv"
  "action/ConvertDxfToCam.action"
  DEPENDENCIES 
    std_msgs
    sensor_msgs
    action_msgs
    geometry_msgs
    builtin_interfaces
)

ament_export_dependencies(rosidl_default_runtime)

ament_package()